--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,14 +4,11 @@ html {
   -webkit-text-size-adjust: 100%;
   height: 100%;
 }
-body {
-  margin: 0;
-  height: 100%;
-}
-/* dirty fixes */
+body,
 #___gatsby,
-div[role='group'] {
+#gatsby-focus-wrapper {
   height: 100%;
+  margin: 0;
 }
 article,
 aside,
